@@ -2,6 +2,7 @@
 
 = 2.5.0 - 2021-xx-xx =
 * Fix - Fix hover dialog for close button on modals, unify styling and layout of modal buttons.
+* Update - Use Site Language when rendering Stripe elements.
 
 = 2.4.0 - 2021-05-12 =
 * Update - Improve the Connect Account page.
